// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _accessKey="V" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="access-key-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _alert=true 1`] = `
<kol-input-email _alert="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _disabled=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _hint="Hint" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-email _hide-error="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _readOnly=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _accessKey="V" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="access-key-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _alert=true 1`] = `
<kol-input-email _alert="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _disabled=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _hint="Hint" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-email _hide-error="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _readOnly=true 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] _touched=true 1`] = `
<kol-input-email _touched="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _suggestions=["email1@test.de","email2@test.de","email3@test.de"] 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" _touched=true 1`] = `
<kol-input-email _touched="" class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@test.de" 1`] = `
<kol-input-email class="has-value kol-input-email">
  <template shadowrootmode="open">
    <kol-input _currentlength="13" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="email" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" spellcheck="false" type="email" value="email@test.de">
      </div>
    </kol-input>
  </template>
</kol-input-email>
`;
